--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
+body{
+  font-family: 'Raleway', sans-serif;
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bodyImage {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.componentCont{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.component{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 10px;
+  border:1px solid;
+  width: 500px;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 7px;
+}
+h1{
   color: white;
+  font-size: 60px;
 }
-
-.App-link {
-  color: #61dafb;
+h2{
+  display: flex;
+  text-align: center;
+  font-size: 25px;
+  font-weight: 900;
 }
+.cuisine{
+  font-size: 20px;
+}
+.colories{
+  font-size: 20px;
+  font-weight: 900;
+  color: #7f1d07;
+}
+.searchIcon{
+  background-color: #ae4730;
+  border: none;
+}
+input{
+  width: 350px;
+  height: 30px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  font-size: 20px;
+  /* border: 1px solid #6acc02; */
+}
+form{
+  display:flex;
+  justify-content: center;
+}
+ul{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+li{
+  list-style-type: none;
+}
+a{
+  color: #7f1d07;
+}
+.text{
+  font-size: 18px;
+}
+@media all and (max-width:500px){
+  .component{
+    
+    width: 350px;
   }
-  to {
-    transform: rotate(360deg);
+  .img{
+    width: 330px;
+    height: 330px;
+  }
+  h1{
+    font-size: 40px;
+  }
+  input{
+    width: 300px;
+  }
+  li{
+    font-size: 15px;
+    text-align: left;
   }
 }
